--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,4 +1,5 @@
-org.gradle.jvmargs=-Xmx512m -XX:MaxMetaspaceSize=256m -XX:ReservedCodeCacheSize=128m -Xss256k
+org.gradle.jvmargs=-Xmx4g -XX:MaxMetaspaceSize=1g -Dfile.encoding=UTF-8
+org.gradle.vfs.watch=false
 org.gradle.workers.max=1
 org.gradle.parallel=false
 org.gradle.daemon=false
